Fixed left nav home style - z-index issue with command bar - button style conflict

--- a/src/components/LeftNav.module.scss
+++ b/src/components/LeftNav.module.scss
@@ -13,7 +13,7 @@
     width: 220px;
     position: absolute;
     left: 0;
-    z-index: 10;
+    z-index: 200;
     background-color: #475666;
     font-family: 'OpenSansRegular', sans-serif;
     font-size: 14px;
